<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    tools:context=".MainActivity">

    <!-- Imagem ecnontrada neste endereço: https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.alumni.usp.br%2Fwp-content%2Fuploads%2Fsites%2F244%2F2017%2F07%2FAtivo-5.png&imgrefurl=https%3A%2F%2Fwww.alumni.usp.br%2Fcomo-cadastrar%2F&tbnid=w2xE5rEKNRYClM&vet=12ahUKEwiV4cTD5tb0AhWAALkGHUMvBW0QMygLegUIARDJAQ..i&docid=bmsEdBor_LyNiM&w=522&h=220&itg=1&q=imagem%20png%20aprovado%20ou%20reprovado&ved=2ahUKEwiV4cTD5tb0AhWAALkGHUMvBW0QMygLegUIARDJAQ -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="293dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="63dp"
        android:src="@drawable/aprovadoreprovado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_aluno"
        android:layout_width="357dp"
        android:layout_height="34dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:background="@color/goldenrod_light"
        android:gravity="center"
        android:hint="@string/txt_aluno"
        android:inputType="text"
        android:maxLength="120"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txt_trabalho1"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_below="@+id/txt_aluno"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/goldenrod_light"
        android:gravity="center"
        android:hint="@string/txt_trabalho1"
        android:inputType="number"
        android:maxLength="2"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_aluno" />

    <EditText
        android:id="@+id/txt_trabalho2"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_below="@+id/txt_aluno"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="34dp"
        android:layout_toEndOf="@+id/txt_trabalho1"
        android:background="@color/goldenrod_light"
        android:gravity="center"
        android:hint="@string/txt_trabalho2"
        android:inputType="number"
        android:maxLength="2"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toEndOf="@+id/txt_trabalho1"
        app:layout_constraintTop_toBottomOf="@+id/txt_aluno" />

    <EditText
        android:id="@+id/txt_teste"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_below="@+id/txt_trabalho1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:background="@color/goldenrod_light"
        android:gravity="center"
        android:text=""
        android:hint="@string/txt_teste"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_trabalho1" />

    <EditText
        android:id="@+id/txt_prova"
        android:layout_width="151dp"
        android:layout_height="37dp"
        android:layout_below="@+id/txt_trabalho2"
        android:layout_alignBottom="@+id/txt_aluno"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="-88dp"
        android:layout_toEndOf="@+id/txt_teste"
        android:background="@color/goldenrod_light"
        android:gravity="center"
        android:hint="@string/txt_prova"
        android:inputType="number"
        android:maxLength="2"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toEndOf="@+id/txt_teste"
        app:layout_constraintTop_toBottomOf="@+id/txt_trabalho1" />

    <Button
        android:id="@+id/bt_calulcar_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_teste"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="@color/goldenrod"
        android:text="@string/bt_calcular_media"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_teste" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="323dp"
        android:layout_height="240dp"
        android:layout_below="@+id/bt_calulcar_media"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="34dp"
        android:text=""
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/bt_calulcar_media"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="70dp" />

    <Button
        android:id="@+id/bt_limpar"
        android:layout_width="352dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/goldenrod"
        android:text="@string/bt_limpar_dados"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado" />

</RelativeLayout>